syntax = "proto3";

package remote;

service TelegrafRemote {
    rpc StartConfigStreaming (Greeting) returns (stream ConfigPack) {};

    rpc ReportState (CurrentState) returns (CurrentStateResponse) {};
}

message Identifiers {
    // The identifier of this running instance of remote telegraf
    string tid = 1;

    // Optionally indicates that this is a telegraf that operates in a region on behalf of multi-tenants
    string region = 2;
    // Optionally indicates that this is a telegraf situated on a specific tenant's node
    string tenant = 3;
}

message Greeting {
    Identifiers identifiers = 1;

    map<string,string> nodeTag = 2;
}

message CurrentState {
    Identifiers identifiers = 1;

    repeated string activeConfigIds = 2;
}

message CurrentStateResponse {
    repeated string removedId = 1;
}

message ConfigPack {
    repeated Config new = 1;
    repeated Config modified = 2;
    repeated string removedIds = 3;
}

message Config {
    string id = 1;
    string tenantId = 2;
    string definition = 3;
    string title = 4;
}
